# client-server

./: CMakeLists.txt  README.md  client.c  client.cpp  create.sql  requests.cpp  serverM.c  serverM.cpp
